--- a/posts/templates/posts/main.html
+++ b/posts/templates/posts/main.html
@@ -105,7 +105,7 @@
             {{post.title}}
           </div>
           <div id="main__info_div__post_left__content">
-            {{post.content|truncatechars:110 | safe }}
+            {{post.content|truncatechars:110 |truncatechars_html:10 | safe }}
           </div>
           <div id="main__info_div__post_left__reaction">
             <i class="fa-solid fa-eye"></i>
