--- a/static/css/post_main.css
+++ b/static/css/post_main.css
@@ -79,11 +79,11 @@
   padding: 1.75rem 3rem;
 }
 
-#search_div__top_left__search input:hover{
+#search_div__top_left__search input:hover {
   border-color: #2253ff;
 }
 
-#search_div__top_left__search input:active{
+#search_div__top_left__search input:active {
   border-color: #2253ff;
 }
 
@@ -230,6 +230,7 @@
 }
 
 #main__info_div__post_left__content {
+  height: 50px;
   margin: 1.25rem 0rem;
   line-height: 1.5rem;
 }
@@ -242,7 +243,7 @@
 }
 
 #main__info_div__post_right__info_time {
-  color: #8C8C8C;
+  color: #8c8c8c;
   margin-top: 0.25rem;
 }
 
@@ -278,6 +279,7 @@
 #main__info_div__post_left__reaction {
   margin-bottom: 10px;
   width: 100%;
+  padding-top: 20px;
 }
 
 #main__info_div__post_right__info {
@@ -475,7 +477,7 @@
 }
 
 #main__top_left__ul__recruit_finish {
-  background-color: #9D9D9D;
+  background-color: #9d9d9d;
   border-radius: 0px;
   color: white;
 }
