--- a/posts/templates/posts/main_revise.html
+++ b/posts/templates/posts/main_revise.html
@@ -158,16 +158,18 @@
       </div>
     </div>
     <div id="post_write__modal">
-      <div class="post_write__modal__overlay">
-        <div class="post_write__modal__content">
-          <div class="post_write__modal__close_btn">X</div>
-          <h1>글쓰기가 완료되었습니다!</h1>
-          <button class="post_write__register__complete_btn" type="submit">
-            등록하기
-          </button>
-        </div>
-      </div>
-    </div>
+			<div class="post_write__modal__overlay">
+				<div class="post_write__modal__content">
+					<div class="post_write__modal__close_btn">
+						<i class="fa-solid fa-xmark fa-lg"></i>
+					</div>
+					<h1>수정이 완료되었습니다!</h1>
+					<h3>전원 모집 완료되면 모집완료로 전환하시는거 잊지 말아주세요🥹</h3>
+					<i class="fa-solid fa-circle-check fa-3x"></i>
+					<button class="post_write__register__complete_btn" type="submit">수정하기</button>
+				</div>
+			</div>
+		</div>
   </form>
   <script src="/static/js/post_main_write.js"></script>
   <script>
@@ -244,5 +246,4 @@
     }
   </script>
 </div>
-<script src="/static/js/post_main_write.js"></script>
 {% endblock %}
