--- a/static/css/post_main_detail.css
+++ b/static/css/post_main_detail.css
@@ -31,7 +31,7 @@
 
 #main__detail__top_left__ul__recruit_finish {
   background-color: #9d9d9d;
-  color: black;
+  color: white;
   font-size: 13px;
 }
 
