--- a/posts/templates/posts/main_detail.html
+++ b/posts/templates/posts/main_detail.html
@@ -460,6 +460,8 @@
                             <div class="post_detail__review__page">
                               {% if reviews.has_previous %}
                                 <a href="?page={{reviews.previous_page_number}}" class="post_detail__review__page_previous">이전</a>
+                              {% else %}
+                                <a href="?page={{reviews.previous_page_number}}" class="post_detail__review__page_previous">이전</a>
                               {% endif %}
 
                               {% for p in reviews.paginator.page_range %}
